--- a/trunk/perldoc/ko/perl/etc/perlref.pod
+++ b/trunk/perldoc/ko/perl/etc/perlref.pod
@@ -41,7 +41,7 @@ hashes of arrays, arrays of hashes of functions, and so on.
 
 Perl 5릴리즈 이전에서는 모든 리퍼런스는 심볼릭이 아니면 안되었기 때문에,
 복잡한 데이터 구조를 표현하는 것이 곤란했었습니다.
-그리고 심볼릭 테이블의 엔트리가 아닌 변수를 참ㅗ하고 싶다고 생각할 때에도
+그리고 심볼릭 테이블의 엔트리가 아닌 변수를 참고하고 싶다고 생각할 때에도
 곤란했습니다.
 Perl 은 심볼릭리퍼런스를 변수로써 사용하는 것을 간단하게 한 것 뿐만 아니라,
 임의의 데이터에 대해 "하드" 리퍼런스를 가지는 것도 가능했었습니다.
@@ -286,7 +286,7 @@ statements, not compile-time declarations.
 조합할 수 있습니다.
 뒤에 기술할 다차원구문은, 그런 것에 대해서도 사용할 수 있습니다.
 위의 값은 리터럴이지만, 변수나 식이어도 상관없습니다.
-Perl 에서의 대입연산은 (예를 들어 local()이나 my() 안에서도) 컬파일 시의
+Perl 에서의 대입연산은 (예를 들어 local()이나 my() 안에서도) 컴파일 시의
 선언문이 아닌 실행문이기때문입니다.
 
 =begin original
@@ -416,7 +416,7 @@ closures work:
 
 =end original
 
-클러져는 eval 없이 서브루틴의 템플레이트를 기술하는 방법으로
+클로져는 eval 없이 서브루틴의 템플레이트를 기술하는 방법으로
 생각할 수도 있습니다.
 아래 나타내는 것은 클로져가 어떻게 동작하는 가의 예입니다.
 
@@ -1237,7 +1237,7 @@ B<주의>: 현재의 눈에띄는 형태의 유사해쉬의 완성(배열의 최
 Perl 5.10.0 부터는 없어져서 이 기능은 별도의 방법으로 만들어질 예정입니다.
 현재의 인터페이스는 지저분할 뿐아니라, 현재의 완성은 일반적인 배열과
 해쉬의 이용을 꽤 눈에띄게 늦어지게 하고 있습니다.
-"fields" 프라그마인터페이는 이용가능한대로 남겨둡니다.
+"fields" 프라그마인터페이스는 이용가능한대로 남겨둡니다.
 
 =begin original
 
